--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,13 @@
     <script src="js/bundle.js"></script>
   </head>
   <body>
-    <h1>Countries of the World</h1>
-    <label for="countries">Select a country:</label>
-    <select id="countries">
-      <option selected disabled></option>
-    </select>
-    <div id="country"><div>
+    <div class="flex container">
+      <h1>Countries of the World</h1>
+      <label for="countries">Select a country:</label>
+      <select id="countries">
+        <option selected disabled></option>
+      </select>
+      <div id="country" class="flex"><div>
+    </div>
   </body>
 </html>
